# qrv

./: .gitignore  LICENSE  README.md
source/: .gitignore  CMakeLists.txt  OpenDialog.h  OpenDialog.ui  main.cpp  qrv.cpp  qrv.h  qrv.pro  qrv.qrc  qrv.ui
